# nix2c

./: .gitignore  .gitmodules  clean-build.sh  input-file.nix  input-file.nix.c  input-file.sh  meson.build  node-symbols-enum.sh  readme.md  shell.sh
docs/: debugging.md
src/: loader.c  nix2c.c  node-symbols-enum.h
subprojects/tree-sitter-nix/: meson.build
